<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SalahActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/dummy_loc"
            android:paddingBottom="@dimen/inner_frame_layout_padding"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingRight="@dimen/inner_frame_layout_padding"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fajr_title"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/fajr"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/sunrise"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dhuhur"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/asr"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/maghrib"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/isha"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingLeft="@dimen/inner_frame_layout_padding"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fajr"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/dhuhur"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/isha"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="@dimen/inner_frame_layout_padding"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/dummy"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>