<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SalahActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/prefs"
            android:paddingBottom="@dimen/inner_frame_layout_padding"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:gravity="top"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="0dp"
                android:paddingEnd="2dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/method"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="@dimen/prayer_font_size"
                    android:text="@string/asr_calc"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="0dp"
                android:paddingStart="2dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/method_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_methods"
                    />

                <Spinner
                    android:id="@+id/asrcalc_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_asrcalcs"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>